--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
-    "sysproxy": "node index.js"
+    "sysproxy": "node index.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
